Added Webview for youtube Youtube video will play without fullscreen option and related videos Expander View implemented

--- a/src/MAUI9/MAUIPlayground/MAUIPlayground.csproj
+++ b/src/MAUI9/MAUIPlayground/MAUIPlayground.csproj
@@ -79,6 +79,9 @@
 	  <MauiXaml Update="Pages\Playground.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\YouTube.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 	
 </Project>
